objects/ssot__EngagementChannelTypeConsent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentCapturedDateTime__c</fullName>
        <label>Consent Captured Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedSourceName__c</fullName>
        <label>Consent Captured Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentStatusId__c</fullName>
        <label>Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Channel Type Consent Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157804_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConsentStatus_Id_map_EngagementChann_rel</label>
        <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
        <relationshipLabel>ConsentStatus_Id_map_EngagementChann_rel</relationshipLabel>
        <relationshipName>rel_1697761157804_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761172604_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelTypeConsent_Consent_rel</label>
        <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
        <relationshipLabel>EngagementChannelTypeConsent_Consent_rel</relationshipLabel>
        <relationshipName>rel_1697761172604_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761172670_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelTypeConsent_PartyId_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>EngagementChannelTypeConsent_PartyId_rel</relationshipLabel>
        <relationshipName>rel_1697761172670_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>